--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -5,7 +5,11 @@
 }
 
 body {
+  width: 100%;
   margin: 0 auto;
+  color: #fff;
+  background: linear-gradient(45deg, #14AFFC 0%, #7F23F7 48.96%, #FC19AD 100%);
+  // box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
   a {
     text-decoration: none;
