feat: add input search

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -8,8 +8,10 @@ body {
   width: 100%;
   margin: 0 auto;
   color: #fff;
-  background: linear-gradient(45deg, #14AFFC 0%, #7F23F7 48.96%, #FC19AD 100%);
+  background: linear-gradient(45deg, #A5B4FC 0%, #0B3D91 48.96%, #312E81 100%) no-repeat;
+
   // box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  // background: #312E81;
 
   a {
     text-decoration: none;
