--- a/src/components/pages/Main/Main.scss
+++ b/src/components/pages/Main/Main.scss
@@ -1,4 +1,4 @@
-.container {
+.wrapper {
     display: flex;
     flex-direction: column;
     max-width: 1120px;
@@ -6,11 +6,14 @@
     margin-top: 65px;
 
     .header {
+        max-width: 1022px;
         display: flex;
         flex-direction: column;
+        align-items: center;
         gap: 16px;
+        margin: 0 auto;
 
-        .header-title-logo {
+        .title-logo {
             display: flex;
             flex-direction: row;
             align-items: center;
@@ -38,22 +41,30 @@
             }
         }
 
-        .header-description {
-            h2 {
-                font-family: 'Inter';
-                font-style: normal;
-                font-weight: 800;
-                font-size: 60px;
-                line-height: 100%;
+        .description {
+            display: flex;
+            flex-direction: column;
 
-                text-align: center;
+            font-family: 'Inter', sans-serif;
+            font-style: normal;
+            font-weight: 800;
+            font-size: 60px;
+            line-height: 60px;
+            text-align: center;
 
+            .gradient-text {
                 background: linear-gradient(0deg, rgba(255, 255, 255, 0.56), rgba(255, 255, 255, 0.56)), linear-gradient(45deg, #14AFFC 0%, #7F23F7 48.96%, #FC19AD 100%);
                 -webkit-background-clip: text;
                 -webkit-text-fill-color: transparent;
                 background-clip: text;
-                // text-fill-color: transparent;
             }
+        }
+
+        .search {
+            display: flex;
+            justify-content: center;
+            padding-top: 32px;
+            padding-bottom: 32px;
         }
     }
 }
