--- a/src/components/Gallery/Gallery.scss
+++ b/src/components/Gallery/Gallery.scss
@@ -1,3 +1,11 @@
+.results {
+  font-size: 24px;
+  font-family: Inter;
+  font-weight: 500;
+  line-height: 100%;
+  padding: 24px 0;
+}
+
 .cards {
   display: flex;
   flex-direction: row;
