--- a/src/components/pages/Main/Main.scss
+++ b/src/components/pages/Main/Main.scss
@@ -36,7 +36,7 @@
                 width: 74.25px;
                 height: 61.5px;
                 padding: 17.25px 11.25px;
-                background-image: url(../../../assets/svg/NASA_logo.svg);
+                background-image: url(../../../assets/svg/NASALogo.svg);
                 background-repeat: no-repeat;
                 background-position: center;
             }
