feat: add pagination

--- a/src/components/Gallery/Gallery.scss
+++ b/src/components/Gallery/Gallery.scss
@@ -29,4 +29,9 @@
     gap: 32px;
     justify-content: center;
   }
+
+  .css-1oj2twp-MuiPagination-root {
+    margin: 0 auto;
+    padding-bottom: 20px;
+  }
 }
