--- a/src/components/Gallery/Gallery.scss
+++ b/src/components/Gallery/Gallery.scss
@@ -12,6 +12,13 @@
     line-height: 100%;
     padding: 0px 10px;
 
+    .wrapper-buttons {
+      padding: 10px;
+      border: 1px solid #fff;
+      border-radius: 10px;
+      margin: 0 10px;
+    }
+
     .size-cards {
       display: flex;
       flex-direction: row;
