--- a/src/components/Gallery/Card/Card.scss
+++ b/src/components/Gallery/Card/Card.scss
@@ -15,14 +15,15 @@
         border-radius: 8px;
     }
 
-    .card-description,
-    h3 {
-        font-family: 'Inter';
-        font-style: normal;
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 20px;
-        color: #FFFFFF;
+    .card-description {
+        h3 {
+            font-family: 'Inter';
+            font-style: normal;
+            font-weight: 500;
+            font-size: 16px;
+            line-height: 20px;
+            color: #FFFFFF;
+        }
 
         .details {
             display: flex;
