--- a/src/components/Gallery/Gallery.scss
+++ b/src/components/Gallery/Gallery.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 24px;
+
   .results {
     display: flex;
     align-items: center;
@@ -12,11 +13,17 @@
     line-height: 100%;
     padding: 0px 10px;
 
-    .wrapper-buttons {
+    p {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      gap: 10px;
+    }
+
+    b {
       padding: 10px;
-      border: 1px solid #fff;
+      background-color: #312E81;
       border-radius: 10px;
-      margin: 0 10px;
     }
 
     .size-cards {
