--- a/src/components/pages/Main/Main.scss
+++ b/src/components/pages/Main/Main.scss
@@ -61,8 +61,9 @@
             }
         }
 
-        .search {
+        .search-buttons {
             display: flex;
+            flex-direction: column;
             justify-content: center;
             padding-top: 32px;
             padding-bottom: 32px;
