--- a/src/components/DateFilter/DateFilter.scss
+++ b/src/components/DateFilter/DateFilter.scss
@@ -4,8 +4,7 @@
   gap: 10px;
   padding: 15px;
   border: 1px solid #fff;
-
-
+  border-radius: 10px;
 
   .css-o9k5xi-MuiInputBase-root-MuiOutlinedInput-root,
   .css-1jy569b-MuiFormLabel-root-MuiInputLabel-root,
