--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -7,11 +7,11 @@
 body {
   width: 100%;
   margin: 0 auto;
-  color: #fff;
-  background: linear-gradient(45deg, #A5B4FC 0%, #0B3D91 48.96%, #312E81 100%) no-repeat;
 
-  // box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  // background: #312E81;
+  .wrapper {
+    color: #fff;
+    background: linear-gradient(45deg, #A5B4FC 0%, #0B3D91 48.96%, #312E81 100%) no-repeat;
+  }
 
   a {
     text-decoration: none;
