--- a/src/components/pages/Details/Details.scss
+++ b/src/components/pages/Details/Details.scss
@@ -2,7 +2,8 @@
   width: 100%;
   background: #312E81;
 
-  .container-details {
+  .wrapper-header,
+  .wrapper-main {
     max-width: 1376px;
     margin: 0 auto;
 
@@ -10,6 +11,7 @@
       display: flex;
       flex-direction: row;
       justify-content: space-between;
+      padding: 0 10px;
 
       .title-details {
         display: flex;
@@ -35,7 +37,19 @@
           border-left-color: #818CF8;
           background-color: #818CF8;
         }
-    }
+      }
+
+      .button-back {
+        display: flex;
+        align-items: center;
+        border-left: 1px solid #818CF8;
+        padding-left: 15px;
+
+        .css-1e6y48t-MuiButtonBase-root-MuiButton-root {
+          color: #fff;
+        }
+      }
+
     }
 
     main {
@@ -43,7 +57,7 @@
 
       display: flex;
       flex-direction: row;
-      padding-top: 32px;
+      padding: 32px 10px 0 10px;
       gap: 24px;
       color: #fff;
 
@@ -67,8 +81,8 @@
         flex-direction: column;
 
         .image {
-          width: 920px;
-          height: 600px;
+          width: 100%;
+          height: auto;
           border-radius: 11.335px;
           object-fit: cover;
         }
@@ -78,7 +92,7 @@
           flex-direction: column;
           flex-wrap: wrap;
           gap: 15px;
-          width: 50%;
+          width: 70%;
           padding: 20px;
 
           .keywords {
