--- a/src/components/pages/Details/Details.scss
+++ b/src/components/pages/Details/Details.scss
@@ -57,7 +57,7 @@
 
       display: flex;
       flex-direction: row;
-      padding: 32px 10px 0 10px;
+      padding: 32px 10px 20px 10px;
       gap: 24px;
       color: #fff;
 
@@ -79,6 +79,7 @@
       .img-keywords {
         display: flex;
         flex-direction: column;
+        width: 70%;
 
         .image {
           width: 100%;
@@ -114,7 +115,7 @@
         display: flex;
         flex-direction: column;
         gap: 10px;
-        width: 100%;
+        width: 30%;
 
           .photographer, 
           .date-created {
@@ -140,7 +141,7 @@
               .description {
                 font-size: 16px;
                 gap: 15px;
-                max-width: 400px;
+                max-width: 90%;
               }
           }
       }
