fix: empty component

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -7,11 +7,12 @@
 body {
   width: 100%;
   margin: 0 auto;
-  background: #312E81;
+  min-height: 100vh;
+  background: linear-gradient(45deg, #A5B4FC 0%, #0B3D91 48.96%, #312E81 100%) no-repeat;
+
 
   .wrapper {
     color: #fff;
-    background: linear-gradient(45deg, #A5B4FC 0%, #0B3D91 48.96%, #312E81 100%) no-repeat;
   }
 
   a {
