--- a/src/components/Empty/Empty.scss
+++ b/src/components/Empty/Empty.scss
@@ -13,17 +13,20 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 5px;
+    align-items: center;
+    gap: 10px;
     padding-bottom: 20px;
+    font-family: "Inter", sans-serif;
 
       h3 {
         font-size: 28px;
-        font-family: "Inter", sans-serif;
+        // font-family: "Inter", sans-serif;
       }
 
       p {
         font-size: 20px;
-        font-family: "Inter", sans-serif;
+        background-color: #312E81;
+        padding: 5px;
       }
   }
 }
