--- a/src/components/pages/Details/Details.scss
+++ b/src/components/pages/Details/Details.scss
@@ -58,9 +58,9 @@
 
     main {
       font-family: 'Inter', sans-serif;
-
       display: flex;
       flex-direction: row;
+      flex-wrap: wrap;
       padding: 32px 10px 20px 10px;
       gap: 24px;
       color: #fff;
@@ -84,7 +84,7 @@
       .img-keywords {
         display: flex;
         flex-direction: column;
-        width: 70%;
+        width: 60%;
 
         .image {
           width: 100%;
@@ -153,6 +153,92 @@
                 color: #fff;
               }
           }
+      }
+    }
+  }
+}
+
+@media(min-width: 600px) and (max-width: 1100px) {
+    .wrapper-details {
+
+      .wrapper-main {
+        main {
+          display: flex;
+          flex-direction: column;
+
+          .img-keywords {
+            flex-direction: row;
+            width: 100%;
+
+            .image {
+              width: 70%;
+            }
+
+            .wrapper-keywords {
+              width: 100%;
+              .keywords {
+                flex-direction: row;
+                flex-wrap: wrap;
+                width: 100%;
+              }
+            }
+          }
+
+          .metadata {
+            width: 100%;
+          }
+        }
+      }
+    }
+}
+
+@media(min-width: 380px) and (max-width: 599px) {
+  .wrapper-details {
+    .wrapper-header {
+      header {
+
+        .title-details {
+          h3 {
+            font-size: 14px;
+            padding: 7px;
+          }
+        }
+      }
+    }
+    .wrapper-main {
+      main {
+        gap: 5px;
+
+        .img-keywords {
+          flex-direction: column;
+          width: 100%;
+          align-items: center;
+
+          .image {
+            width: 80%;
+            object-fit: contain;
+          }
+
+          .wrapper-keywords {
+            width: 100%;
+            padding: 10px;
+
+            .keywords {
+              flex-direction: row;
+              flex-wrap: wrap;
+              justify-content: center;
+              width: 100%;
+
+              .keyword {
+                font-size: 10px;
+              }
+            }
+          }
+        }
+
+        .metadata {
+          width: 100%;
+        }
       }
     }
   }
