--- a/src/components/Empty/Empty.scss
+++ b/src/components/Empty/Empty.scss
@@ -9,7 +9,7 @@
     background-position: center;
     background-size: contain;
   }
-  .empty {
+  .empty-text {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -20,7 +20,6 @@
 
       h3 {
         font-size: 28px;
-        // font-family: "Inter", sans-serif;
       }
 
       p {
