--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -1,6 +1,16 @@
-.search {
+.search-wrapper {
+  font-family: 'Inter', sans-serif;
+  font-size: 16px;
+
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  align-items: center;
+  gap: 10px;
   padding-top: 32px;
+
+  b {
+    background-color: rgb(49, 46, 129);
+    padding: 5px;
+    border-radius: 5px;
+  }
 }
