--- a/src/components/Divider/Divider.scss
+++ b/src/components/Divider/Divider.scss
@@ -1,9 +1,5 @@
 hr {
   width: 100%;
   height: 1px;
-  border-top-color: #818CF8;
-  border-right-color: #818CF8;
-  border-bottom-color: #818CF8;
-  border-left-color: #818CF8;
-  background-color: #818CF8;
+  background-color: #818cf8;
 }
