--- a/src/components/Gallery/Card/Card.scss
+++ b/src/components/Gallery/Card/Card.scss
@@ -4,7 +4,6 @@
     flex-direction: column;
     justify-content: flex-start;
     gap: 10px;
-
     width: 256px;
     min-height: 220px;
 
@@ -14,17 +13,15 @@
         object-fit: cover;
         border-radius: 8px;
     }
-
     .card-description {
         h3 {
-            font-family: 'Inter';
+            font-family: 'Inter', sans-serif;
             font-style: normal;
             font-weight: 500;
             font-size: 16px;
             line-height: 20px;
-            color: #FFFFFF;
+            color: #fff;
         }
-
         .details {
             display: flex;
             flex-direction: column;
@@ -34,7 +31,6 @@
             .location,
             .photographer {
                 display: flex;
-                flex-direction: row;
                 gap: 5px;
                 align-items: center;
 
