--- a/src/components/Gallery/Gallery.scss
+++ b/src/components/Gallery/Gallery.scss
@@ -11,39 +11,32 @@
     font-family: Inter;
     font-weight: 500;
     line-height: 100%;
-    padding: 0px 10px;
+    padding: 0 10px;
 
     p {
       display: flex;
-      flex-direction: row;
       align-items: center;
       gap: 10px;
     }
-
     b {
       padding: 10px;
       background-color: #312E81;
       border-radius: 10px;
     }
-
     .size-cards {
       display: flex;
-      flex-direction: row;
       align-items: center;
       gap: 10px;
-
       font-size: 18px;
     }
   }
 
   .cards {
     display: flex;
-    flex-direction: row;
     flex-wrap: wrap;
     gap: 32px;
     justify-content: center;
   }
-
   .css-1oj2twp-MuiPagination-root {
     margin: 0 auto;
     padding-bottom: 20px;
