--- a/src/components/pages/Details/Details.scss
+++ b/src/components/pages/Details/Details.scss
@@ -10,14 +10,12 @@
 
     header {
       display: flex;
-      flex-direction: row;
       justify-content: space-between;
       padding: 0 10px;
       width: 100%;
 
       .title-details {
         display: flex;
-        flex-direction: row;
         width: 100%;
 
         h3 {
@@ -35,18 +33,14 @@
         hr {
           width: 1px;
           height: 74px;
-          border-top-color: #818CF8;
-          border-right-color: #818CF8;
-          border-bottom-color: #818CF8;
-          border-left-color: #818CF8;
-          background-color: #818CF8;
+          background-color: #818cf8;
         }
       }
 
       .button-back {
         display: flex;
         align-items: center;
-        border-left: 1px solid #818CF8;
+        border-left: 1px solid #818cf8;
         padding-left: 15px;
 
         .css-1e6y48t-MuiButtonBase-root-MuiButton-root {
@@ -59,7 +53,6 @@
     main {
       font-family: 'Inter', sans-serif;
       display: flex;
-      flex-direction: row;
       flex-wrap: wrap;
       padding: 32px 10px 20px 10px;
       gap: 24px;
@@ -67,11 +60,10 @@
 
       h4 {
         font-size: 16px;
-        font-family: Inter;
+        font-family: 'Inter', sans-serif;
         font-weight: 500;
         line-height: 24px;
       }
-
       p {
         font-family: 'Inter', sans-serif;
         font-size: 14px;
@@ -80,7 +72,6 @@
         line-height: 20px;
         color: #fff;
       }
-
       .img-keywords {
         display: flex;
         flex-direction: column;
@@ -89,10 +80,9 @@
         .image {
           width: 100%;
           height: auto;
-          border-radius: 11.335px;
+          border-radius: 11px;
           object-fit: cover;
         }
-
         .wrapper-keywords {
           display: flex;
           flex-direction: column;
@@ -103,7 +93,6 @@
 
           .keywords {
             display: flex;
-            flex-direction: row;
             flex-wrap: wrap;
             gap: 10px;
             width: 70%;
@@ -115,7 +104,6 @@
           }
         }
       }
-
       .metadata {
         display: flex;
         flex-direction: column;
@@ -125,16 +113,15 @@
           .photographer,
           .date-created {
             display: flex;
-            flex-direction: row;
             justify-content: space-between;
           }
 
           h5 {
             font-size: 14px;
-            font-family: Inter;
+            font-family: 'Inter', sans-serif;
             font-weight: 500;
             line-height: 20px;
-            color: #D1D5DB;
+            color: #d1d5db;
           }
 
           .wrapper-description {
@@ -148,7 +135,6 @@
                 gap: 15px;
                 max-width: 90%;
               }
-
               .text-descr {
                 color: #fff;
               }
@@ -160,14 +146,12 @@
 
 @media(min-width: 600px) and (max-width: 1100px) {
     .wrapper-details {
-
       .wrapper-main {
         main {
           display: flex;
           flex-direction: column;
 
           .img-keywords {
-            flex-direction: row;
             width: 100%;
 
             .image {
@@ -177,7 +161,6 @@
             .wrapper-keywords {
               width: 100%;
               .keywords {
-                flex-direction: row;
                 flex-wrap: wrap;
                 width: 100%;
               }
@@ -192,7 +175,7 @@
     }
 }
 
-@media(min-width: 380px) and (max-width: 599px) {
+@media(min-width: 320px) and (max-width: 599px) {
   .wrapper-details {
     .wrapper-header {
       header {
@@ -224,7 +207,6 @@
             padding: 10px;
 
             .keywords {
-              flex-direction: row;
               flex-wrap: wrap;
               justify-content: center;
               width: 100%;
@@ -238,6 +220,29 @@
 
         .metadata {
           width: 100%;
+        }
+      }
+    }
+  }
+}
+
+@media(min-width: 320px) and (max-width: 480px) {
+  .wrapper-details {
+    .wrapper-main {
+      main {
+        h4 {
+          font-size: 14px;
+        }
+        .metadata {
+          h5 {
+            font-size: 12px;
+          }
+
+          .wrapper-description {
+            p {
+              font-size: 10px;
+            }
+          }
         }
       }
     }
