--- a/src/components/pages/Main/Main.scss
+++ b/src/components/pages/Main/Main.scss
@@ -15,10 +15,9 @@
 
         .title-logo {
             display: flex;
-            flex-direction: row;
             align-items: center;
             justify-content: center;
-            gap: 14.5px;
+            gap: 15px;
 
             .title {
                 h1 {
@@ -32,12 +31,10 @@
             }
 
             .logo {
-                width: 74.25px;
-                height: 61.5px;
-                padding: 17.25px 11.25px;
-                background-image: url(../../../assets/svg/NASALogo.svg);
-                background-repeat: no-repeat;
-                background-position: center;
+                width: 74px;
+                height: 62px;
+                padding: 17px 11px;
+                background: url(../../../assets/svg/NASALogo.svg) no-repeat center;
             }
         }
 
