fix: planets buttons

--- a/src/components/PlanetsButtons/PlanetsButtons.scss
+++ b/src/components/PlanetsButtons/PlanetsButtons.scss
@@ -12,5 +12,11 @@
     flex-wrap: wrap;
     justify-content: center;
     gap: 25px;
+    &.visible {
+      display: flex;
+    }
+    &.hidden {
+      display: none;
+    }
   }
 }
