--- a/src/components/pages/Details/Details.scss
+++ b/src/components/pages/Details/Details.scss
@@ -122,6 +122,7 @@
             font-weight: 500;
             line-height: 20px;
             color: #d1d5db;
+            padding-right: 10px;
           }
 
           .wrapper-description {
@@ -153,6 +154,7 @@
 
           .img-keywords {
             width: 100%;
+            align-items: center;
 
             .image {
               width: 70%;
