--- a/src/components/Empty/Empty.scss
+++ b/src/components/Empty/Empty.scss
@@ -1,5 +1,6 @@
 .empty-wrapper {
   display: flex;
+  padding: 0 10px;
 
   .empty-image {
     width: 300px;
@@ -24,5 +25,36 @@
         padding: 5px;
         border-radius: 5px;
       }
+  }
+}
+
+@media (max-width: 700px) and (min-width: 480px) {
+  .empty-wrapper {
+    .empty-text {
+      h3 {
+        font-size: 22px;
+      }
+
+      p {
+        font-size: 16px;
+      }
+    }
+  }
+}
+
+@media (max-width: 479px) and (min-width: 320px) {
+  .empty-wrapper {
+    .empty-image {
+      width: 200px;
+      height: 350px;
+    }
+    .empty-text {
+      h3 {
+        font-size: 16px;
+      }
+      p {
+        font-size: 10px;
+      }
+    }
   }
 }
