--- a/src/components/PlanetsButtons/PlanetsButtons.scss
+++ b/src/components/PlanetsButtons/PlanetsButtons.scss
@@ -12,6 +12,7 @@
     flex-wrap: wrap;
     justify-content: center;
     gap: 25px;
+    padding: 5px;;
     &.visible {
       display: flex;
     }
