fix: date filter style

--- a/src/components/PlanetsButtons/PlanetsButtons.scss
+++ b/src/components/PlanetsButtons/PlanetsButtons.scss
@@ -6,6 +6,10 @@
   width: 100%;
   padding: 10px;
 
+  .css-yl4jce-JoyButton-root {
+    background-color: #096BDE;
+  }
+
   .buttons {
     width: 100%;
     display: flex;
