--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -9,7 +9,7 @@
   padding-top: 32px;
 
   b {
-    background-color: rgb(49, 46, 129);
+    background-color: #096BDE;
     padding: 5px;
     border-radius: 5px;
   }
