--- a/src/components/DateFilter/DateFilter.scss
+++ b/src/components/DateFilter/DateFilter.scss
@@ -1,10 +1,17 @@
 .date-filter {
-  display: flex;
-  align-items: center;
+  display: grid;
+  grid-template-columns: 60px 270px 60px;
+  justify-items: center;
   gap: 10px;
   padding: 15px;
   border: 1px solid #fff;
   border-radius: 10px;
+  border-color: #096BDE;
+
+  .date-pickers {
+    display: flex;
+    gap: 10px;
+  }
 
   .btn-filter {
     width: 50px;
@@ -20,14 +27,28 @@
 
   .css-1u3bzj6-MuiFormControl-root-MuiTextField-root {
     max-width: 130px;
+    border-color: #096BDE;
   }
 }
 
 @media (max-width: 480px) and (min-width: 320px) {
   .date-filter {
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: auto auto;
+    justify-items: center;
 
-    .btn-filter {
+    .date-pickers {
+      grid-column: 1 / span 2;
+    }
+    .btn-filter-search {
+      grid-column: 1;
+      grid-row: 2;
+      width: 25px;
+      height: 25px;
+    }
+    .btn-filter-clear {
+      grid-column: 2;
+      grid-row: 2;
       width: 25px;
       height: 25px;
     }
