--- a/src/components/Gallery/Gallery.scss
+++ b/src/components/Gallery/Gallery.scss
@@ -20,7 +20,7 @@
     }
     b {
       padding: 10px;
-      background-color: #312E81;
+      background-color: #096BDE;
       border-radius: 10px;
     }
     .size-cards {
@@ -48,6 +48,8 @@
     flex-direction: column;
     flex-wrap: wrap;
     gap: 10px;
+
+    
   }
 
   .description {
@@ -59,13 +61,16 @@
 @media (min-width: 320px) and (max-width: 549px) {
   .css-yuzg60-MuiButtonBase-root-MuiPaginationItem-root {
       padding: 0;
-    }
+  }
   .results {
     flex-direction: column;
     flex-wrap: wrap;
     gap: 10px;
       p {
         font-size: 14px;
+      }
+      .css-11u53oe-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input {
+        padding: 5px 10px;
       }
   }
 
