--- a/src/components/Gallery/Card/Card.scss
+++ b/src/components/Gallery/Card/Card.scss
@@ -41,3 +41,12 @@
         }
     }
 }
+
+@media (max-width: 549px) and (min-width: 320px) {
+    .card {
+        width: 125px;
+        .card-img {
+            width: 125px;
+        }
+    }
+}
