--- a/src/components/DateFilter/DateFilter.scss
+++ b/src/components/DateFilter/DateFilter.scss
@@ -8,9 +8,14 @@
   border-radius: 10px;
   border-color: #096BDE;
 
-  .date-pickers {
+  .date-inputs {
     display: flex;
     gap: 10px;
+
+    .css-tilzqs-JoyInput-root,
+    .css-mpifb8-JoyInput-root {
+      width: 135px;
+    }
   }
 
   .btn-filter {
@@ -34,11 +39,11 @@
 @media (max-width: 480px) and (min-width: 320px) {
   .date-filter {
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: 300px auto;
     justify-items: center;
 
     .date-pickers {
-      grid-column: 1 / span 2;
+      grid-column: 1 / span 3;
     }
     .btn-filter-search {
       grid-column: 1;
