--- a/src/components/DateFilter/DateFilter.scss
+++ b/src/components/DateFilter/DateFilter.scss
@@ -13,7 +13,8 @@
     gap: 10px;
 
     .css-tilzqs-JoyInput-root,
-    .css-mpifb8-JoyInput-root {
+    .css-mpifb8-JoyInput-root,
+    .css-klda7-JoyInput-root {
       width: 135px;
     }
   }
